# PerdoncinPACS

./: README
Examples/Laplace2D/: CMakeLists.txt  data_file.prm  main_Laplace_2D.cpp  mesh.msh
Examples/Laplace3D/: CMakeLists.txt  data_file.prm  main_Laplace_3D.cpp  mesh.msh
Examples/Stokes2D/: CMakeLists.txt  data_file.prm  main_Stokes_2D.cpp  mesh.msh
include/: PDASLaplace.hpp  PDASProblem.hpp  PDASStokes.hpp
